# bevy_simplenet_events

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
bevy_simplenet_events_derive/: Cargo.toml
bevy_simplenet_events_derive/src/: events.rs  lib.rs
src/: core.rs  event_registry.rs  lib.rs
src/client/: app_ext.rs  event_client.rs  event_client_core.rs  event_client_inner.rs  event_queue_connector.rs  event_queues.rs  inner_bevy_events.rs  mod.rs  readers.rs  server_response.rs
src/server/: app_ext.rs  event_queue_connector.rs  event_queues.rs  event_server.rs  event_server_core.rs  inner_bevy_events.rs  mod.rs  readers.rs  server.rs
tests/test/: mod.rs  tests.rs
